Fixed graph alignment.

--- a/assets/sass/solograph.scss
+++ b/assets/sass/solograph.scss
@@ -25,7 +25,7 @@ a {
   &__content {
 
     .location {
-      font-size: 1.4em;
+      font-size: 1em;
       left: 0px;
       padding-left: 1em;
       padding-right: 1em;
@@ -74,6 +74,8 @@ a {
   height: 100%;
 
   svg {
+    margin: 0px auto;
+    max-height: 100vh;
     left: 0%;
     position: absolute;
     right: 0%;
